src/CSBill/CoreBundle/Resources/public/less/styles.less
// Include Bootstrap
@import "bootstrap/variables";
@import "bootstrap/mixins/border-radius";
@import "bootstrap/mixins/pagination";
@import "bootstrap/pagination";
@import "material/_colors";

.clear {
    clear: both;
}

.container {
    width: 100%;
}

div.pagination > ul {
    .pagination;
}

ul.unstyled {
    li {
        list-style: none;
    }
}

/* QUOTE / INVOICE
*******************/

#quote-rows, #invoice-rows {
    .column-price {
        width: 20%;
    }

    .column-total {
        width: 10%;
    }

    .column-qty {
        width: 8%;
    }
}

#quote-create, #invoice-create {
  .title h2, .title h3 {
    display: inline-block;
  }

  .table > tbody > tr > .no-line {
    border-top: none;
  }

  .table > thead > tr > .no-line {
    border-bottom: none;
  }

  .table > tbody > tr > .thick-line {
    border-top: 2px solid;
  }

  .column-total {
    text-align: right;
  }
}

/* NAV
********/

.right-nav {
  .action-button {
    width: 100%;
  }
}

#top-menu-create-button {
  margin: 15px 0 0 15px;
}

.modal .loading-mask {
  z-index: 10;
}

/* INSTALLATION
*******************/

.stepwizard-step p {
    margin-top: 10px;
}

.process-row {
    display: table-row;

    &:before {
        top: 25px;
        bottom: 0;
        position: absolute;
        content: " ";
        width: 100%;
        height: 1px;
        background-color: #ccc;
    }
}

.process {
    display: table;
    width: 100%;
    position: relative;
}

.process-step {
    display: table-cell;
    text-align: center;
    position: relative;
    width: 20%;

    p {
        margin-top: 5px;
    }

    button[disabled] {
        opacity: 1 !important;
        filter: alpha(opacity=100) !important;
    }

    .btn-circle {
        width: 50px;
        height: 50px;
        text-align: center;
        padding: 6px 0;
        font-size: 12px;
        line-height: 1.428571429;
        border-radius: 15px;
    }
}

.modal-backdrop, .modal-backdrop.fade.in {
    position: fixed;
}

#payment-method-tabs {
  overflow: scroll;
  height: 95%;
}

.loading-spinner {
  width: 200px;
  margin-left: -100px !important;
  .progress {
    height: 6px;
  }
  .progress-bar {
    width: 100%;
  }
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

